# sotumerp

./: AUTHORS  CMakeLists.txt
CMakeModules/: CodeCoverage.cmake
src/: sotumerp.cpp
